logs/dag_id=1Training_DAG_V1.0/run_id=manual__2024-02-13T114437.254555+0000/task_id=data_to_db/attempt=1.log
[2024-02-13T11:44:44.424+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: 1Training_DAG_V1.0.data_to_db manual__2024-02-13T11:44:37.254555+00:00 [queued]>
[2024-02-13T11:44:44.434+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: 1Training_DAG_V1.0.data_to_db manual__2024-02-13T11:44:37.254555+00:00 [queued]>
[2024-02-13T11:44:44.435+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2024-02-13T11:44:44.453+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): data_to_db> on 2024-02-13 11:44:37.254555+00:00
[2024-02-13T11:44:44.460+0000] {standard_task_runner.py:60} INFO - Started process 4519 to run task
[2024-02-13T11:44:44.463+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', '1Training_DAG_V1.0', 'data_to_db', 'manual__2024-02-13T11:44:37.254555+00:00', '--job-id', '11382', '--raw', '--subdir', 'DAGS_FOLDER/traning_dag.py', '--cfg-path', '/tmp/tmpjvofxsvt']
[2024-02-13T11:44:44.465+0000] {standard_task_runner.py:88} INFO - Job 11382: Subtask data_to_db
[2024-02-13T11:44:44.532+0000] {task_command.py:423} INFO - Running <TaskInstance: 1Training_DAG_V1.0.data_to_db manual__2024-02-13T11:44:37.254555+00:00 [running]> on host 06573eafe810
[2024-02-13T11:44:44.639+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='1Training_DAG_V1.0' AIRFLOW_CTX_TASK_ID='data_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-02-13T11:44:37.254555+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-02-13T11:44:37.254555+00:00'
[2024-02-13T11:44:44.652+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-13T11:44:44.670+0000] {traning_dag.py:34} INFO -    Москва  2024-02-12  0  -5  748  1
0  Москва  2024-02-12  1  -6  747  0
1  Москва  2024-02-12  2  -6  747  0
2  Москва  2024-02-12  3  -6  747  0
3  Москва  2024-02-12  4  -5  746  1
4  Москва  2024-02-12  5  -5  746  0
[2024-02-13T11:44:44.679+0000] {traning_dag.py:41} INFO - columns: Москва, 2024-02-12, 0, -5, 748, 1
[2024-02-13T11:44:44.679+0000] {traning_dag.py:45} INFO - values: VALUES(%s,%s,%s,%s,%s,%s)
[2024-02-13T11:44:44.687+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/traning_dag.py", line 50, in csv_db
    psycopg2.extras.execute_batch(pCursor, insert_stmt, df.values)
  File "/home/airflow/.local/lib/python3.8/site-packages/psycopg2/extras.py", line 1216, in execute_batch
    cur.execute(b";".join(sqls))
psycopg2.errors.SyntaxError: syntax error at or near "2024"
LINE 1: INSERT INTO Training (Москва, 2024-02-12, 0, -5, 748, 1) VAL...
                                      ^

[2024-02-13T11:44:44.698+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=1Training_DAG_V1.0, task_id=data_to_db, execution_date=20240213T114437, start_date=20240213T114444, end_date=20240213T114444
[2024-02-13T11:44:44.712+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 11382 for task data_to_db (syntax error at or near "2024"
LINE 1: INSERT INTO Training (Москва, 2024-02-12, 0, -5, 748, 1) VAL...
                                      ^
; 4519)
[2024-02-13T11:44:44.762+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-13T11:44:44.797+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
